--- a/app/src/main/res/layout-land/fragment_tag.xml
+++ b/app/src/main/res/layout-land/fragment_tag.xml
@@ -14,9 +14,9 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.144">
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/new_tag"
@@ -48,16 +48,18 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.876"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.335" />
+        app:layout_constraintVertical_bias="0.161" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tag_list_view"
-        android:layout_width="277dp"
-        android:layout_height="392dp"
+        android:layout_width="276dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.876"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tag_list_header"
         app:layout_constraintVertical_bias="0.0"
